Add section for newPush function in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
         extra questions</p>
     </header>
 
+    <section>
+      <div>
+        <label for="new-push">Push Method</label><input type="text" id="new-push"
+          placeholder="ex: 1, 2, 3"><button>SEND!</button>
+      </div>
+    </section>
 
+    <section></section>
 
   </main>
 </body>
