Add newPush to the index document

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
 
     <section>
       <div>
-        <label for="new-push">Push Method</label><input type="text" id="new-push"
-          placeholder="ex: 1, 2, 3"><button>SEND!</button>
+        <label for="new-push">Push Method</label><input type="text" id="new-push" class="new-push"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-push-add"></label> <input type="text" class="new-push-add" placeholder="ex: 1">
+
+        <button class="push-send">SEND!</button>
+        <p class="push-answer"></p>
       </div>
     </section>
 
     <section></section>
 
   </main>
+  <script src="app/main.js" type="module"></script>
 </body>
 
 </html>
