Add newPush function to index.html

--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
 
     <section>
       <div>
-        <label for="new-push">Push Method</label><input type="text" id="new-push" class="new-push"
+        <h3>Push Method</h3>
+
+        <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
           placeholder="ex: 1, 2, 3" value="">
 
-        <label for="new-push-add"></label> <input type="text" class="new-push-add" placeholder="ex: 1">
+        <label for="new-push-add">What do you wish to add?</label> <input type="text" class="new-push-add"
+          placeholder="ex: 1">
 
         <button class="push-send">SEND!</button>
-        <p class="push-answer"></p>
+        <div>
+          <p class="push-answer">Your new list will come up here!</p>
+          <ol class="array-elements"></ol>
+        </div>
       </div>
     </section>
 
