Add sass settings and styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <title>Array Fun</title>
 </head>
 
@@ -15,12 +18,12 @@
 
     <header>
       <h1>ISDI Array Methods</h1>
-      <p>Welcome to Array examples! introduce your list and select the methods you wish to perform, some may required
-        extra questions</p>
+      <p>Welcome to Array examples! introduce your list on the method you wish to perform, some may required
+        extra questions, use spaces to separate elements. Enjoy!</p>
     </header>
 
     <section>
-      <div>
+      <div class="push-container">
         <h3>Push Method</h3>
 
         <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
