Add sendPop fumction to main.js

--- a/index.html
+++ b/index.html
@@ -35,12 +35,27 @@
         <button class="push-send">SEND!</button>
         <div>
           <p class="push-answer">Your new list will come up here!</p>
-          <ol class="array-elements"></ol>
+          <ol class="array-elements-push"></ol>
         </div>
       </div>
     </section>
 
-    <section></section>
+    <section>
+      <div class="pop-container">
+        <h3>Pop Method</h3>
+
+        <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-push">Last Element will be removed from your list!</label>
+
+        <button class="pop-send">SEND!</button>
+        <div>
+          <p class="pop-answer">Your new list will come up here!</p>
+          <ol class="array-elements-pop"></ol>
+        </div>
+      </div>
+    </section>
 
   </main>
   <script src="app/main.js" type="module"></script>
