Add sendpop function and styles to html element

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div class="pop-container">
         <h3>Pop Method</h3>
 
-        <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
-          placeholder="ex: 1, 2, 3" value="">
+        <label for="new-pop">Your List</label><input type="text" id="new-pop" class="new-pop" placeholder="ex: 1, 2, 3"
+          value="">
 
-        <label for="new-push">Last Element will be removed from your list!</label>
+        <label for="new-pop">Last Element will be removed from your list!</label>
 
         <button class="pop-send">SEND!</button>
         <div>
