Fix spacing and item aligment

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
     <section>
       <div class="push-container">
         <h3>Push Method</h3>
+        <div class="container-interacion">
+          <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
+            placeholder="ex: 1, 2, 3" value="">
 
-        <label for="new-push">Your List</label><input type="text" id="new-push" class="new-push"
-          placeholder="ex: 1, 2, 3" value="">
+          <label for="new-push-add">What do you wish to add?</label> <input type="text" id="new-push-add"
+            class="new-push-add" placeholder="ex: 1">
 
-        <label for="new-push-add">What do you wish to add?</label> <input type="text" class="new-push-add"
-          placeholder="ex: 1">
-
-        <button class="push-send">SEND!</button>
+          <button class="push-send">SEND!</button>
+        </div>
         <div>
           <p class="push-answer">Your new list will come up here!</p>
           <ol class="array-elements-push"></ol>
@@ -61,11 +62,11 @@
       <div class="unshift-container">
         <h3>Unshift Method</h3>
 
-        <label for="unshift-push">Your List</label><input type="text" id="new-unshift" class="new-unshift"
+        <label for="new-unshift">Your List</label><input type="text" id="new-unshift" class="new-unshift"
           placeholder="ex: 1, 2, 3" value="">
 
-        <label for="new-unshift-add">What do you wish to add?</label> <input type="text" class="new-unshift-add"
-          placeholder="ex: 1">
+        <label for="new-unshift-add">What do you wish to add?</label> <input type="text" id="new-unshift-add"
+          class="new-unshift-add" placeholder="ex: 1">
 
         <button class="unshift-send">SEND!</button>
         <div>
