Add unshift html and styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <label for="new-pop">Your List</label><input type="text" id="new-pop" class="new-pop" placeholder="ex: 1, 2, 3"
           value="">
 
-        <label for="new-pop">Last Element will be removed from your list!</label>
+        <label for="new-pop">Last element will be removed from your list!</label>
 
         <button class="pop-send">SEND!</button>
         <div>
@@ -72,6 +72,23 @@
         <div>
           <p class="unshift-answer">Your new list will come up here!</p>
           <ol class="array-elements-unshift"></ol>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="shift-container">
+        <h3>Shift Method</h3>
+
+        <label for="new-shift">Your List</label><input type="text" id="new-shift" class="new-shift"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-shift">First element will be removed from your list!</label>
+
+        <button class="shift-send">SEND!</button>
+        <div>
+          <p class="shift-answer">Your new list will come up here!</p>
+          <ol class="array-elements-shift"></ol>
         </div>
       </div>
     </section>
