Add some function to html and apply styles

--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
       </div>
     </section>
 
+    <section>
+      <div class="some-container">
+        <h3>Some Method</h3>
+
+        <label for="new-some">Your List</label><input type="text" id="new-some" class="new-some"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-some-add">What are we looking for?</label> <input type="text" id="new-some-add"
+          class="new-some-add" placeholder="ex: (a) => a > 2">
+
+        <button class="some-send">SEND!</button>
+        <div>
+          <p class="some-answer">Your new list will come up here!</p>
+          <ol class="array-elements-some"></ol>
+        </div>
+      </div>
+    </section>
+
   </main>
   <script src="app/main.js" type="module"></script>
 </body>
