Add every function to html and styles

--- a/index.html
+++ b/index.html
@@ -105,8 +105,26 @@
 
         <button class="some-send">SEND!</button>
         <div>
-          <p class="some-answer">Your new list will come up here!</p>
+          <p class="some-answer">Your answer will come up here!</p>
           <ol class="array-elements-some"></ol>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="every-container">
+        <h3>Every Method</h3>
+
+        <label for="new-every">Your List</label><input type="text" id="new-every" class="new-every"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-every-add">What are we looking for?</label> <input type="text" id="new-every-add"
+          class="new-every-add" placeholder="ex: (a) => a > 2">
+
+        <button class="every-send">SEND!</button>
+        <div>
+          <p class="every-answer">Your answer will come up here!</p>
+          <ol class="array-elements-every"></ol>
         </div>
       </div>
     </section>
