--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@
       </div>
     </section>
 
+    <section>
+      <div class="every-container">
+        <h3>Every Method</h3>
+
+        <label for="new-every">Your List</label><input type="text" id="new-every" class="new-every"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-every-add">What are we looking for?</label> <input type="text" id="new-every-add"
+          class="new-every-add" placeholder="ex: (a) => a > 2">
+
+        <button class="every-send">SEND!</button>
+        <div>
+          <p class="every-answer">Your answer will come up here!</p>
+          <ol class="array-elements-every"></ol>
+        </div>
+      </div>
+    </section>
+
   </main>
   <script src="app/main.js" type="module"></script>
 </body>
