Add new find function and eventlisteners

--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
     </section>
 
     <section>
-      <div class="every-container">
-        <h3>Every Method</h3>
+      <div class="find-container">
+        <h3>Find Method</h3>
 
-        <label for="new-every">Your List</label><input type="text" id="new-every" class="new-every"
+        <label for="new-find">Your List</label><input type="text" id="new-find" class="new-find"
           placeholder="ex: 1, 2, 3" value="">
 
-        <label for="new-every-add">What are we looking for?</label> <input type="text" id="new-every-add"
-          class="new-every-add" placeholder="ex: (a) => a > 2">
+        <label for="new-find-add">What are we looking for?</label> <input type="text" id="new-find-add"
+          class="new-find-add" placeholder="ex: (a) => a > 2">
 
-        <button class="every-send">SEND!</button>
+        <button class="find-send">SEND!</button>
         <div>
-          <p class="every-answer">Your answer will come up here!</p>
-          <ol class="array-elements-every"></ol>
+          <p class="find-answer">Your answer will come up here!</p>
+          <ol class="array-elements-find"></ol>
         </div>
       </div>
     </section>
