Add filter function to html

--- a/index.html
+++ b/index.html
@@ -147,6 +147,24 @@
       </div>
     </section>
 
+    <section>
+      <div class="filter-container">
+        <h3>Filter Method</h3>
+
+        <label for="new-filter">Your List</label><input type="text" id="new-filter" class="new-filter"
+          placeholder="ex: 1, 2, 3" value="">
+
+        <label for="new-filter-add">What are we looking for?</label> <input type="text" id="new-filter-add"
+          class="new-filter-add" placeholder="ex: (a) => a > 2">
+
+        <button class="filter-send">SEND!</button>
+        <div>
+          <p class="filter-answer">Your answer will come up here!</p>
+          <ol class="array-elements-filter"></ol>
+        </div>
+      </div>
+    </section>
+
   </main>
   <script src="app/main.js" type="module"></script>
 </body>
