Add new map function to index.html

--- a/index.html
+++ b/index.html
@@ -165,6 +165,24 @@
       </div>
     </section>
 
+    <section>
+      <div class="map-container">
+        <h3>Map Method</h3>
+
+        <label for="new-map">Your List</label><input type="text" id="new-map" class="new-map" placeholder="ex: 1, 2, 3"
+          value="">
+
+        <label for="new-map-add">What are we looking for?</label> <input type="text" id="new-map-add"
+          class="new-map-add" placeholder="ex: (a) => a > 2">
+
+        <button class="map-send">SEND!</button>
+        <div>
+          <p class="map-answer">Your answer will come up here!</p>
+          <ol class="array-elements-map"></ol>
+        </div>
+      </div>
+    </section>
+
   </main>
   <script src="app/main.js" type="module"></script>
 </body>
